# affe-ffi

./: .gitignore  LICENSE  Makefile  README.md
docs/: index.html  style.css
lang/affe/: affe_lang.ml  affe_www.ml  dune  lexer.mll  name.ml  parser.mly  printer.ml  region.ml  syntax.ml  transl.ml  variance.ml
lang/affe/affi/: affi.ml  renaming.ml  unused_vars.ml
lang/hm/: hm.ml
vsc_extension/affe/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vsc_extension/affe/syntaxes/: affe.tmLanguage.json
www/: script.js
zoo/: zoo.mli
zoo/native/: zoo.ml
zoo/web/: dune  zoo.ml  zoo_web.ml
zoo/web/jsootop/: dune  jsootop.ml
