(ocamllex lexer)
(menhir
  (modules parser)
  (flags --explain --strict)
)

(library
  (name affe)
  (libraries ocamlgraph iter zoo)
  (modules :standard \ Affe Affe_www Eval)
  (preprocess (pps ppx_deriving.std))
  (wrapped true)
)

(executable
  (name affe)
  (modules Affe)
  (libraries affe zoo_native)
)
(executable
  (name affe_www)
  (modules Affe_www)
  (libraries affe zoo_web)
  (preprocess (pps tyxml-ppx))
  (modes js)
  (js_of_ocaml
    (flags --toplevel --dynlink +dynlink.js +toplevel.js)
  )
)

(include_subdirs unqualified)