(ocamllex lexer)
(menhir
  (modules parser)
  (flags --explain --strict)
)

(library
  (name affe)
  (libraries ocamlgraph iter zoo)
  (modules :standard \ Affe Affe_docs Eval)
  (preprocess (pps ppx_deriving.std))
  (wrapped false)
)

(executable
  (name affe)
  (modules Affe)
  (libraries affe zoo_native)
)
(executable
  (name affe_docs)
  (modules Affe_docs)
  (libraries affe zoo_web)
  (preprocess (pps tyxml-ppx))
  (modes js)
  (js_of_ocaml)
)

(include_subdirs unqualified)